test/cgip/PP/error/inheritance/rep/reperr-39.err105
"Line 4 column 24
208: Class name is not defined"
